@@ -6016,9 +6016,14 @@ class tslib_cObj {
 						$addQueryParams .= trim($this->stdWrap($conf['additionalParams'],$conf['additionalParams.']));
 						if (substr($addQueryParams,0,1)!='&')		{
 							$addQueryParams = '';
-						} elseif ($conf['useCacheHash']) {	// cache hashing:
-								// Added '.$this->linkVars' dec 2003: The need for adding the linkVars is that they will be included in the link, but not the cHash. Thus the linkVars will always be the problem that prevents the cHash from working. I cannot see what negative implications in terms of incompatibilities this could bring, but for now I hope there are none. So here we go... (- kasper);
-							$addQueryParams .= '&cHash=' . t3lib_div::generateCHash($addQueryParams . $GLOBALS['TSFE']->linkVars);
+						}
+						if ($conf['useCacheHash']) {
+								// Mind the order below! See http://bugs.typo3.org/view.php?id=5117
+							$params = $GLOBALS['TSFE']->linkVars . $addQueryParams;
+							if ($params) {
+								$addQueryParams .= '&cHash=' . t3lib_div::generateCHash($params);
+							}
+							unset($params);
 						}
 
 						$targetDomain = '';
